--- a/瀑布流/瀑布流布局.html
+++ b/瀑布流/瀑布流布局.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <div id="main" style="background: red;height: 900px;">
+    <div id="main">
         <div class="box">
             <div class="pic">
                 <img src="../imgs/a1.png">
